Trying to solve authentication

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://frank-merk.github.io/react-employee-directory/",
+  "homepage": "http://frank-merk.github.io/react-employee-directory/",
   "name": "employee-tracker",
   "version": "0.1.0",
   "private": true,
